# robotics

./: .gitignore  .gitmodules  Notes  README.md  cuda_check  semantic.rviz  semantic_map.yaml
gazebo_models/room_carol/: model.config  model.sdf
gazebo_models/tablecaaarrol/: model.config  model.sdf
gazebo_models/wall1/: model.sdf
gazebo_models/wall2/: model.sdf
gazebo_models/wall_colored/: model.config  model.sdf
src/: notes
src/collision_avoidance/: CMakeLists.txt  package.xml
src/collision_avoidance/launch/: main.launch
src/collision_avoidance/scripts/: Untitled-2.py  avoidance.py  carol.py  control_robot2.py  control_robot3.py  controle_robot1.py
src/collision_avoidance/worlds/: carol  teste.world  teste_bkp.world
src/deep_wall_follow/: CMakeLists.txt  package.xml
src/deep_wall_follow/launch/: mundo.launch  robo.launch
src/deep_wall_follow/scripts/: control.py  label_data  read.py  training_data  wall_following.py
src/deep_wall_follow/worlds/: w.world
src/gazebo_ros_3dx/defs/: sonar_pos.urdf.xacro  sonar_sensor.urdf.xacro
src/mapping/: package.xml
src/mapping/launch/: main.launch  robot.launch
src/mapping/scripts/: control.py  control2.py  mapping.py
src/mapping/worlds/: simplewall.world  wall2.world
src/mapping_sonar/: CMakeLists.txt  package.xml
src/mapping_sonar/launch/: mundo.launch  potential.launch
src/mapping_sonar/scripts/: mapa_para_potencial.json  mapa_para_potencial.npz
src/rbtsonar/: CMakeLists.txt  package.xml
src/semantic/: CMakeLists.txt  package.xml
src/wall_following/: package.xml
(+54 files in other folders)
